contact us Done

--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@
 # Database Password: zsIJPlPywvdGkZaZ
 
 PORT = 5000
-DATABASE_URL = "mongodb+srv://hasanmiaweb:zsIJPlPywvdGkZaZ@keymechanic.pen5a.mongodb.net/"
+DATABASE_URL = "mongodb+srv://hasanmiaweb:zsIJPlPywvdGkZaZ@keymechanic.pen5a.mongodb.net/Key-Mechanic"
 NODE_ENV = "development"
