Handle Global Error and App Error

--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@
 PORT = 5000
 DATABASE_URL = "mongodb+srv://hasanmiaweb:zsIJPlPywvdGkZaZ@keymechanic.pen5a.mongodb.net/Key-Mechanic"
 NODE_ENV = "development"
+
+# DATABASE_URL = "mongodb://127.0.0.1:27017/databaseName"
