--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "mongoose": "^8.7.1",
-    "zod": "^3.23.8"
+    "mongoose": "^8.7.1"
   },
   "devDependencies": {
     "ts-node-dev": "^2.0.0",
